# data-structure-and-algorithm

./: .gitignore  Makefile  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  scratch.py  test.sh  tsconfig.json
challenges/array/: best_time_to_buy_and_sell_stock_ii.py  best_time_to_buy_and_sell_stock_ii.rb  contains_duplicate.py  contains_duplicate.rb  intersection_of_two_arrays_2.py  intersection_of_two_arrays_2.rb  intersection_of_two_arrays_2.ruby  move_zeroes.py  move_zeroes.rb  plus_one.py  plus_one.rb  remove_duplicates_from_sorted_array.py  remove_duplicates_from_sorted_array.rb  rotate_array.py  rotate_array.rb  rotate_image.py  rotate_image.rb  single_number.py  single_number.rb  two_sum.py  two_sum.rb  valid_sudoku.py  valid_sudoku.rb
challenges/bitwise_and_others/: hamming_distance.py  missing_number.py  number_of_one_bits.py  (+3 more)
docs/: bitwise-operations.md  python_time_complexities.md
dynamic-programming/: dynamic-programming.md  dynamicProgramming.spec.ts  dynamicProgramming.ts
problem-solving-patterns/: problem-solving-patterns.md
recursion/: recursion.md  recursion.py  recursion.spec.ts  recursion.ts  test_recursion.py
searching-algorithms/: searching-algorithms.md  searchingAlgorithms.spec.ts  searchingAlgorithms.ts  searching_algorithms.py  test_searching_algorithms.py
sorting-algorithms/: sorting-algorithms.md  sortingAlgorithms.spec.ts  sortingAlgorithms.ts  sorting_algorithms.py  test_sorting_algorithms.py
utils/: __init__.py  index.ts  parser.py  time.py
various-scripts/: years_to_reach_41_bits.py
(+174 files in other folders)
